cluster/apps/security/authelia/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name authelia
  namespace: security
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authelia.${SECRET_DOMAIN}`)
      services:
        - name: *name
          port: 9091
          namespace: security
  tls:
    secretName: authelia-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: security
  labels:
    app.kubernetes.io/name: authelia
spec:
  forwardAuth:
    address: http://authelia.security.svc.cluster.local:9091/api/verify?rd=https://authelia.${SECRET_DOMAIN}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
